Доработки по lesson8

--- a/lesson8/.gitignore
+++ b/lesson8/.gitignore
@@ -1,3 +1,4 @@
+.env
 YOUGILE_EMAIL=ramziyaginiyatullina19@gmail.com
 YOUGILE_PASSWORD=samBB2@5RqxW-im
 companyId: ba02d034-3aae-4014-a1ed-d7612ecf975c
